# qgis_dataset_qa_workbench

./: .gitignore  404.html  CHANGELOG.md  LICENSE  Pipfile  README.md  index.html  metadata.ini  mkdocs.yml  pavement.py  plugin-admin.py  plugin-config.yml  plugin_config.ini  pluginadmin.py  pyproject.toml  pytest.ini
.github/workflows/: ci.yml  gh-pages.yml
about/: index.html
collections/dataset-qa-workbench-demo-checklists/checklists/: document-style.json  raster-dataset.json  vector-dataset-non-optional-outputs.json  vector-dataset-with-reportmailer.json  vector-dataset-with-reportposter.json  vector-dataset.json
development/: index.html
docs/: development.md  index.md  user-guide.md
downloadable_checklists/: geocris_document_dataset_validation.json  geocris_document_metadata_validation.json  geocris_raster_dataset_validation.json  geocris_raster_metadata_validation.json  geocris_raster_style_validation.json  geocris_vector_dataset_validation.json  geocris_vector_metadata_validation.json  geocris_vector_style_validation.json
help/source/: conf.py  index.rst
repo/: plugins.xml
resources/: resources.qrc  validation-report-check-template.html  validation-report-check-template.txt  validation-report-template.html  validation-report-template.txt
schemas/: checklist-check.json
scripts/: Makefile
search/: search_index.json
src/checklist_checker/: __init__.py
src/checklist_checker/checklistchecker/: automation.py  checklist_checker.py  checklist_checker_dialog.py  checklist_checker_dock.py  checklist_checker_dock2.py  checklist_downloader.py  checklist_picker.py  checklist_server_editor.py  constants.py  models.py  utils.py
src/checklist_checker/processing_provider/: algorithms.py  provider.py
src/checklist_checker/ui/: checklist_checker_dialog_base.ui  checklist_checker_dock.ui  checklist_checker_dock_base.ui  checklist_checker_dock_base2.ui  checklist_downloader.ui  checklist_picker.ui  checklist_server_editor.ui
src/dataset_qa_workbench/: __init__.py
src/dataset_qa_workbench/datasetqaworkbench/: automation.py  checklist_downloader.py  checklist_picker.py  checklist_server_editor.py  constants.py  dataset_qa_workbench_dock.py  main.py  models.py  report.py  utils.py
src/dataset_qa_workbench/processing_provider/: algorithms.py  provider.py
src/dataset_qa_workbench/processing_provider/algorithms/: base.py  crschecker.py  extentchecker.py  qmlchecker.py  reportmailer.py  reportposter.py  xmlchecker.py
src/dataset_qa_workbench/ui/: checklist_picker.ui  dataset_qa_workbench_dock.ui
test/: test_checklist_checker_dialog.py  test_resources.py  tester_notebook.ipynb
test/.ipynb_checkpoints/: tester_notebook-checkpoint.ipynb
tests/: conftest.py  qgis_interface.py  test_checklist_picker.py  test_dataset_qa_workbench_dock.py  test_main.py  test_utils.py
user-guide/: index.html
