[tool.poetry]
name = "qgis_dataset_qa_workbench"
version = "0.6.0"
description = "A QGIS3 plugin for assisting in dataset quality assurance workflows"
authors = ["Ricardo Garcia Sila <ricardo@kartoza.com>"]
readme = "README.md"
license = "GPL-3.0-only"

[tool.poetry.dependencies]
python = "^3.8"
jsonschema = "^3.2.0"
pyyaml = "^5.3.1"
typer = "^0.3.2"
pytest = "^6.0.2"
pytest-qt = "^3.3.0"
ipython = "^7.18.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
