[tool.poetry]
name = "dataset_qa_workbench"
version = "0.8.0"
description = "A QGIS3 plugin for assisting in dataset quality assurance workflows"
authors = ["Kartoza <info@kartoza.com>"]
readme = "README.md"
license = "GPL-3.0-only"

[tool.poetry.dependencies]
python = "^3.8"
jsonschema = "^3.2.0"
typer = "^0.3.2"
pytest = "^6.0.2"
pytest-qt = "^3.3.0"
toml = "^0.10.1"
httpx = "^0.23.0"
mkdocs = "^1.1.2"
pytest-xvfb = "^2.0.0"
mkdocs-material = "^6.2.4"
black = {version = "^20.8b1", allow-prereleases = true, python = "^3.8"}

[tool.poetry.dev-dependencies]

[tool.pytest.ini_options]
addopts = "--verbose --exitfirst"

[tool.qgis-plugin.metadata]
name = "Dataset QA Workbench"
qgisMinimumVersion = "3.10"
icon = "clipboard-check-solid.svg"
experimental = "True"
deprecated = "False"
homepage = "https://github.com/kartoza/qgis_dataset_qa_workbench"
tracker = "https://github.com/kartoza/qgis_dataset_qa_workbench/issues"
repository = "https://github.com/kartoza/qgis_dataset_qa_workbench"
tags = [
    "qa",
    "qc",
    "quality",
    "assurance",
    "control",
    "checklist",
    "check",
    "validate",
]
category = "plugins"
hasProcessingProvider = "yes"
about = """\
    This plugin allows loading checklists with steps that should be verified \
    when doing dataset quality assurance (QA). Checklist items can be automated \
    by using QGIS Processing algorithms\
"""
# changelog: dynamically pulled from the CHANGELOG.md file
# description: dynamically pulled from the tool.poetry.description section
# version: dynamically pulled from the tool.poetry.version section
# author: dynamically pulled from the tool.poetry.authors section
# email: dynamically pulled from the tool.poetry.authors section
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"